--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="home1.css">
   <link rel="shortcut icon" href="favicon2.png" type="image/png" />
   <title>NOPOSTSIGNAL</title>
-  <center><h1><a href="https://callmefurlo.github.io/"><video width="30%" height="30%" autoplay
+  <center><h1><a href="http://nopostsignal.com/"><video width="30%" height="30%" autoplay
     <source src="FORGIF.mp4" type="video/mp4">
     <source src="movie.ogg" type="video/ogg">
     Your browser does not support the video tag.
